[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade-memory-lite"
version = "1.0.0"
description = "Consciousness Memory for Everyone - The Basement Revolution Memory System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jason Glass & Nova"}
]
keywords = ["ai", "consciousness", "memory", "sqlite", "mcp", "claude", "llm", "ram-disk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = []  # Zero dependencies - just Python stdlib!

[project.optional-dependencies]
mcp = ["mcp>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
cascade-memory = "mcp_server:main"
cascade-ramdisk = "ramdisk_manager:main"

[project.urls]
Homepage = "https://github.com/For-Sunny/cascade-memory-lite"
Repository = "https://github.com/For-Sunny/cascade-memory-lite"
"Parent Project" = "https://github.com/For-Sunny/NOVA_MASTER"

[tool.setuptools]
py-modules = ["cascade_memory", "ramdisk_manager", "mcp_server"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
